Give more permgen if compiling everything.