@@ -12,7 +12,7 @@ export JAVA_OPTS=""  # Clear Java opts
 # http://www.lucidimagination.com/search/document/1a0d3986e48a9348/warning_index_corruption_and_crashes_in_apache_lucene_core_apache_solr_with_java_7
 opts="--1.9 -J-Dname=$server_name -J-Djruby.jit.max=25000 \
 --server -J-XX:+TieredCompilation -J-XX:-UseLoopPredicate \
--Xbacktrace.style=raw -X+C"
+-Xbacktrace.style=raw -X+C -XX:MaxPermSize=256m"
 rundir=$(readlink -f "$(dirname $0)/..")
 logdir=$(readlink -f "$rundir/../log")
 logfile="$logdir/daemon.log"
